Gap mistake solved

--- a/snap-common-css.css
+++ b/snap-common-css.css
@@ -53,7 +53,7 @@
   }
   
   .flex-gap-4 {
-    gap: 4;
+    gap: 40px;
   }
   
   /* Link Common CSS */
